--- a/share/ui/models.ui
+++ b/share/ui/models.ui
@@ -2,6 +2,29 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy project-wide -->
+  <object class="GtkListStore" id="ModelList">
+    <columns>
+      <!-- column-name id -->
+      <column type="gint"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+      <!-- column-name state -->
+      <column type="gboolean"/>
+      <!-- column-name color -->
+      <column type="gchararray"/>
+      <!-- column-name alpha -->
+      <column type="guint"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0">0</col>
+        <col id="1" translatable="yes">Model #1</col>
+        <col id="2">False</col>
+        <col id="3" translatable="yes">#ffff00000000</col>
+        <col id="4">0</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkWindow" id="window1">
     <child>
       <object class="GtkVPaned" id="ModelBox">
@@ -173,33 +196,10 @@
           </object>
           <packing>
             <property name="resize">True</property>
-            <property name="shrink">True</property>
+            <property name="shrink">False</property>
           </packing>
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkListStore" id="ModelList">
-    <columns>
-      <!-- column-name id -->
-      <column type="gint"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-      <!-- column-name state -->
-      <column type="gboolean"/>
-      <!-- column-name color -->
-      <column type="gchararray"/>
-      <!-- column-name alpha -->
-      <column type="guint"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">Model #1</col>
-        <col id="2">False</col>
-        <col id="3" translatable="yes">#ffff00000000</col>
-        <col id="4">0</col>
-      </row>
-    </data>
   </object>
 </interface>
