moved the font dialog to a separate plugin
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1113 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/models.ui
+++ b/share/ui/models.ui
@@ -5,7 +5,7 @@
   <object class="GtkListStore" id="ModelList">
     <columns>
       <!-- column-name id -->
-      <column type="gint"/>
+      <column type="gulong"/>
       <!-- column-name name -->
       <column type="gchararray"/>
       <!-- column-name state -->
