--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -179,16 +179,6 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="LogWindowList">
-    <columns>
-      <!-- column-name timestamp -->
-      <column type="gchararray"/>
-      <!-- column-name type -->
-      <column type="gchararray"/>
-      <!-- column-name message -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkListStore" id="GCodeCornerStyleList">
     <columns>
       <!-- column-name name -->
@@ -3515,139 +3505,6 @@ Any selected group of dimensions will be scaled accordingly.</property>
   </object>
   <object class="GtkAction" id="FeatureRequest">
     <property name="label">Re_quest a Feature</property>
-  </object>
-  <object class="GtkToggleAction" id="ToggleLogWindow">
-    <property name="label">_Log Window</property>
-    <property name="tooltip">Show the event protocol of PyCAM.</property>
-  </object>
-  <object class="GtkDialog" id="LogWindow">
-    <property name="border_width">5</property>
-    <property name="title" translatable="yes">PyCAM event log</property>
-    <property name="role">pycam-log</property>
-    <property name="type_hint">normal</property>
-    <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox6">
-        <property name="visible">True</property>
-        <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
-        <child>
-          <object class="GtkScrolledWindow" id="scrolledwindow2">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
-            <property name="shadow_type">etched-in</property>
-            <child>
-              <object class="GtkTreeView" id="LogWindowTable">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="model">LogWindowList</property>
-                <property name="search_column">1</property>
-                <property name="enable_grid_lines">vertical</property>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn0">
-                    <property name="title">Time</property>
-                    <property name="sort_column_id">0</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnTime"/>
-                      <attributes>
-                        <attribute name="text">0</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn1">
-                    <property name="title">Type</property>
-                    <property name="sort_column_id">1</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnType"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn2">
-                    <property name="title">Message</property>
-                    <property name="sort_column_id">2</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnMessage"/>
-                      <attributes>
-                        <attribute name="text">2</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area4">
-            <property name="visible">True</property>
-            <property name="layout_style">end</property>
-            <child>
-              <object class="GtkButton" id="LogWindowCopyToClipboard">
-                <property name="label">gtk-copy</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="tooltip_text" translatable="yes">Copy the content of the log to the clipboard.</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="LogWindowClear">
-                <property name="label">gtk-clear</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="LogWindowClose">
-                <property name="label">gtk-close</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="pack_type">end</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-    <action-widgets>
-      <action-widget response="0">LogWindowCopyToClipboard</action-widget>
-      <action-widget response="0">LogWindowClear</action-widget>
-      <action-widget response="0">LogWindowClose</action-widget>
-    </action-widgets>
   </object>
   <object class="GtkAction" id="HelpHotkeys">
     <property name="label">_Keyboard Shortcuts</property>
@@ -7265,36 +7122,7 @@ upon interesting bugs and weird results.</property>
           </packing>
         </child>
         <child>
-          <object class="GtkEventBox" id="StatusBarEventBox">
-            <property name="visible">True</property>
-            <child>
-              <object class="GtkHBox" id="hbox37">
-                <property name="visible">True</property>
-                <child>
-                  <object class="GtkImage" id="StatusBarWarning">
-                    <property name="stock">gtk-dialog-warning</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkStatusbar" id="StatusBar">
-                    <property name="visible">True</property>
-                    <property name="spacing">2</property>
-                  </object>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="position">2</property>
-          </packing>
+          <placeholder/>
         </child>
       </object>
     </child>
