--- a/share/ui/tasks.ui
+++ b/share/ui/tasks.ui
@@ -552,13 +552,14 @@
             </child>
           </object>
           <packing>
+            <property name="expand">False</property>
             <property name="position">4</property>
           </packing>
         </child>
       </object>
       <packing>
-        <property name="resize">True</property>
-        <property name="shrink">True</property>
+        <property name="resize">False</property>
+        <property name="shrink">False</property>
       </packing>
     </child>
   </object>
